# medium_fastapi_layered_2023

./: .env.default  .gitignore  LICENSE  Makefile  Pipfile  README.md  alembic.ini  pyproject.toml
http/: products.http
requirements/: dev.txt  main.txt
src/: __init__.py  main.py
src/application/: orders.py  products.py
src/application/authentication/: __init__.py  dependency_injection.py
src/config/: __init__.py
src/domain/authentication/: __init__.py  entities.py  models.py
src/domain/orders/: __init__.py  aggregates.py  entities.py  models.py  repository.py
src/domain/products/: __init__.py  entities.py  models.py  repository.py
src/domain/users/: __init__.py  entities.py  models.py  repository.py
src/domain/users/tests/: __init__.py  factories.py
src/infrastructure/: __init__.py
src/infrastructure/application/: __init__.py  factory.py  processes.py
src/infrastructure/application/entities/: __init__.py  base.py  response.py
src/infrastructure/application/errors/: __init__.py  entities.py  handlers.py
src/infrastructure/database/: __init__.py  repository.py  session.py  tables.py  transaction.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 69888b706120_.py  7db321db2053_.py  e05767a3611a_.py  e869ce4242f8_.py
src/infrastructure/database/services/: __init__.py  engine.py  repository.py  session.py  transactions.py
src/infrastructure/errors/: __init__.py  base.py  handlers.py
src/infrastructure/models/: __init__.py  base.py  response.py
src/presentation/: __init__.py
src/presentation/authentication/: contracts.py  rest.py
src/presentation/orders/: contracts.py  rest.py
src/presentation/products/: __init__.py  contracts.py  rest.py
src/presentation/rest/: __init__.py  orders.py  products.py
src/tests/: conftest.py
src/tests/unit/: test_foo.py
