[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list = py311
    skipsdist = true
    basepython = python3.11

    [testenv]
    deps = -rrequirements/dev.txt
    allowlist_externals = make
    commands = make check
"""



[project]
name = "changeme"
version = "0.1.0"
dependencies = [
    "SQLAlchemy[asyncio,mypy]>=2.0.21",
    "aioredis>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.12",
    "fastapi==0.103.2",
    "gunicorn>=21.2",
    "loguru>=0.7",
    "passlib[bcrypt]>=1.7",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.4",
    "python-jose[cryptography]>=3.3",
    "uvicorn[standard]>=0.23.2",
    "websockets>=11.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.9",
    "httpx>=0.25",
    "isort>=5.12",
    "mypy>=1.5",
    "polyfactory>=2.9",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-env>=1.0",
    "pytest-lazy-fixture>=0.6",
    "pytest-mock>=3.11",
    "pytest>=7.4",
    "ruff>=0.0.292",
    "tox>=4.11",
    "types-passlib>=1.7",
    "types-python-jose>=3.3",
]


[tool.pip-tools]
generate_hashes = true


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".mypy_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache_",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "migrations",
]


# Same as Black.
line-length = 79

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.black]
target-version = ['py311']
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | .tox
  )/
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79
skip = 'venv,.tox'
src_paths = ["."]

[tool.pytest.ini_options]
addopts = '-s -vvv --cache-clear'
asyncio_mode = 'auto'
cache_dir = '/tmp'
python_files = 'tests.py test_*.py *_test.py'
python_functions = 'test_* *_test'
filterwarnings = ['ignore::RuntimeWarning', 'ignore::UserWarning']

[tool.coverage.run]
omit = [
    "*/conftest.py",
    "*/test_*.py",
    "*/migrations/",
    "*/venv/",
    "*/.tox/",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
python_version = '3.11'
files = ['*.py',]
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
exclude = ["venv", ".tox"]

# Silint "type import errors" as our 3rd-party libs does not have types
# Check: https://mypy.readthedocs.io/en/latest/config_file.html#import-discovery
follow_imports = 'silent'

[[tool.mypy.overrides]]
module = [
    "websockets.exceptions",
]
ignore_missing_imports = true


[tool.pyright]
exclude = ["**/__pycache__", "**/venv/*", "**/.tox/*"]
typeCheckingMode = "off"  # off, basic, strict
useLibraryCodeForTypes = true
